--- a/.github/workflows/build_packer.yml
+++ b/.github/workflows/build_packer.yml
@@ -27,21 +27,21 @@ jobs:
     - name: Setup Environment File
       run: |
               cat << EOF > .env
-              DB_USERNAME: ${{ secrets.DB_USERNAME }}
-              DB_HOST: ${{ secrets.DB_HOST }}
-              DB_DATABASE: ${{ secrets.DB_DATABASE }}
-              DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-              DB_DIALECT: ${{ secrets.DB_DIALECT }}
-              SERVER_PORT: ${{ secrets.SERVER_PORT }}
+              DB_USERNAME: chetan
+              DB_PASSWORD: 'Chetan@1234'
+              DB_HOST: localhost
+              DB_DATABASE: cloud
+              DB_DIALECT: postgres
+              SERVER_PORT: 8080
               EOF
       shell: bash
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ secrets.AWS_REGION }}
+        aws-access-key-id: AKIAS66UDIGRYPMOA4NB
+        aws-secret-access-key: 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
+        aws-region: us-east-1
 
     - name: Format Packer templates
       run: packer fmt .
