--- a/.github/workflows/build_packer.yml
+++ b/.github/workflows/build_packer.yml
@@ -50,7 +50,7 @@ jobs:
       run: packer init .
 
     - name: Validate Packer template
-      run: packer validate .
+      run: packer validate -var-file="dev.pkrvars.hcl" webapp.pkr.hcl 
 
     - name: Build Packer template
       run: packer build -var-file="dev.pkrvars.hcl" webapp.pkr.hcl 
