--- a/.github/workflows/packer-ci.yml
+++ b/.github/workflows/packer-ci.yml
@@ -18,6 +18,12 @@ jobs:
       run: |
           zip -r webapp.zip ./
           pwd
+    
+    - name: Upload artifact (webapp.zip)
+      uses: actions/upload-artifact@v3
+      with:
+        name: webapp
+        path: webapp.zip
           
     - name: Setup Environment File
       run: |
@@ -54,72 +60,41 @@ jobs:
           echo "Packer templates need formatting. Run 'packer fmt' locally and push the changes."
           exit 1
         fi
-        
+
+    - name: Download artifact (webapp.zip)
+      uses: actions/download-artifact@v3
+      with:
+        name: webapp
+        path: /tmp/artifact/
+
     - name: Validate Packer template
       env:
-
         aws_vpc_id: ${{ secrets.AWS_VPC_ID }}
-
         aws_subnet_id: ${{ secrets.AWS_SUBNET_ID }}
-
         db_username: ${{ secrets.DB_USERNAME }}
-
         db_password: ${{ secrets.DB_PASSWORD }}
-
         db_name: ${{ secrets.DB_DATABASE }}
-
         aws_instance_type: ${{ secrets.AWS_INSTANCE_TYPE }}
-
         aws_profile: ${{ secrets.AWS_PROFILE }}
-
         aws_source_ami: ${{ secrets.AWS_SOURCE_AMI }}
-
         volume_size: ${{ secrets.VOLUME_SIZE }}
-
-        artifact_path: ${{ secrets.ARTIFACT_PATH }}
-
-        aws_ami_ame: ${{ secrets.AWS_AMI_NAME }}
-
+        artifact_path: /tmp/artifact/webapp.zip
+        aws_ami_name: ${{ secrets.AWS_AMI_NAME }}
         service_name: ${{ secrets.AWS_SERVICE_NAME }}
-
         aws_region: ${{ secrets.AWS_REGION }}
-
       run: |
-
-        # Download the artifact (webapp.zip) and include it in the custom image
-
-        mkdir -p /tmp/artifact
-
-        curl -L ${{ github.event.workflow_run.artifacts_url }}/webapp.zip --output /tmp/artifact/webapp.zip
-
         # Pass the downloaded artifact to the packer build
-
-         
         packer validate -var "aws_vpc_id=${aws_vpc_id}" \
-
                      -var "aws_subnet_id=${aws_subnet_id}" \
-                    
                      -var "db_username=${db_username}" \
-
                      -var "db_password=${db_password}" \
-
                      -var "db_name=${db_name}" \
-
                      -var "aws_instance_type=${aws_instance_type}" \
-
                      -var "aws_profile=${aws_profile}" \
-
                      -var "aws_region=${aws_region}" \
-
-                     -var "aws_instance_type=${AWS_INSTANCE_TYPE}" \
-
                      -var "aws_source_ami=${aws_source_ami}" \
-
                      -var "aws_ami_name=${aws_ami_name}" \
-
                      -var "volume_size=${volume_size}" \
-
-                     -var "artifact_path=/tmp/artifact/webapp.zip" \
-
+                     -var "artifact_path=${artifact_path}" \
                      -var "service_name=${service_name}" \
                      .
