--- a/.github/workflows/build_packer.yml
+++ b/.github/workflows/build_packer.yml
@@ -69,6 +69,9 @@ jobs:
         echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> $GITHUB_ENV
         echo "DB_DIALECT=${{ secrets.DB_DIALECT }}" >> $GITHUB_ENV
         echo "SERVER_PORT=${{ secrets.SERVER_PORT }}" >> $GITHUB_ENV
+
+    - name: Install Dependencies
+      run: npm ci
  
     # Step 9: Run the tests
     - name: Run tests
