--- a/.github/workflows/build_packer.yml
+++ b/.github/workflows/build_packer.yml
@@ -128,7 +128,7 @@ jobs:
         aws_profile: ${{ secrets.AWS_PROFILE }}
         aws_source_ami: ${{ secrets.AWS_SOURCE_AMI }}
         volume_size: ${{ secrets.VOLUME_SIZE }}
-        artifact_path: /tmp/artifact/webapp.zip
+        artifact_path: ${{ secrets.ARTIFACT_PATH }}
         aws_ami_name: ${{ secrets.AWS_AMI_NAME }}
         service_name: ${{ secrets.AWS_SERVICE_NAME }}
         aws_region: ${{ secrets.AWS_REGION }}
