--- a/csye6225.service
+++ b/csye6225.service
@@ -8,7 +8,7 @@ Type=simple
 User=csye6225
 Group=csye6225
 WorkingDirectory=/opt/webapp
-ExecStartPre=/bin/bash -c '/bin/test -e /opt/webapp/src/.env'
+ExecStartPre=/bin/bash -c '/bin/test -e /opt/webapp/.env'
 ExecStart=/usr/bin/node /opt/webapp/src/app.js
 Restart=on-failure
 RestartSec=3
