--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
     "test": "mocha --exit"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.682.0",
     "bcrypt": "^5.1.1",
     "chai": "^5.1.1",
     "dotenv": "^16.4.5",
     "esm": "^3.2.25",
     "express": "^4.21.0",
     "mocha": "^10.7.3",
+    "multer": "^1.4.5-lts.1",
+    "node-statsd": "^0.1.1",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "uuid": "^11.0.2",
+    "winston": "^3.15.0"
   }
 }
