--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "test": "mocha --exit"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.682.0",
+    "@aws-sdk/client-s3": "^3.696.0",
+    "@aws-sdk/client-sns": "^3.696.0",
     "bcrypt": "^5.1.1",
     "chai": "^5.1.1",
     "dotenv": "^16.4.5",
