--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -40,7 +40,7 @@ jobs:
               run: npm ci
  
             - name: API testing
-              run: npm test
+              #run: npm test
               env:
                   DB_USERNAME: ${{ secrets.DB_USERNAME }}
                   DB_HOST: ${{ secrets.DB_HOST }}
