--- a/.github/workflows/integration-test.yml
+++ b/.github/workflows/integration-test.yml
@@ -47,3 +47,11 @@ jobs:
 
       - name: Run API tests
         run: npm test
+        env:
+            DB_USERNAME: ${{ secrets.DB_USERNAME }}
+            DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+            DB_DATABASE: ${{ secrets.DB_DATABASE }}
+            DB_HOST: ${{ secrets.DB_HOST }}
+            DB_DIALECT: ${{ secrets.DB_DIALECT }}
+            SERVER_PORT: ${{ secrets.SERVER_PORT }}
+            APP_ENV: ${{ secrets.APP_ENV }}
